# project_T1

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt
src/kernels/: apply.hpp  basic_kernels.hpp  detail.hpp
src/utilities/: tuple_utilities.hpp  zip.hpp
tests/: CMakeLists.txt
tests/benchmarks/: CMakeLists.txt  simple_kernels_benchmark.cpp
tests/unit_tests/: CMakeLists.txt  basic_kernels_test.cpp  kernels_detail_test.cpp  zip_test.cpp
